--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         {
             "name": "Cristian tabacitu",
             "email": "hello@tabacitu.ro",
-            "homepage": "www.tabacitu.ro",
+            "homepage": "http://www.tabacitu.ro",
             "role": "Dick Master"
         }
     ],
