--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "illuminate/support": "~5.1",
         "php" : ">=5.3.0",
         "prologue/alerts": "0.*",
-        "zizaco/entrust": "dev-laravel-5"
+        "zizaco/entrust": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
