--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dick/crud",
+    "name": "backpack/crud",
     "description": "Quickly build an admin interface for your Eloquent models, using Laravel 5. Build a CMS in a matter of minutes.",
     "keywords": [
         "CRUD",
@@ -11,21 +11,20 @@
         "admin interface",
         "CMS"
     ],
-    "homepage": "https://github.com/tabacitu/CRUD",
+    "homepage": "https://github.com/laravel-backpack/CRUD",
     "license": "MIT",
     "authors": [
         {
             "name": "Cristian tabacitu",
             "email": "hello@tabacitu.ro",
             "homepage": "http://www.tabacitu.ro",
-            "role": "Dick Master"
+            "role": "Chief Architect & Lead Developer"
         }
     ],
     "require": {
         "illuminate/support": "~5.1",
         "php" : ">=5.3.0",
-        "prologue/alerts": "0.*",
-        "zizaco/entrust": "1.4.*"
+        "backpack/base": "0.*"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
@@ -33,12 +32,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Dick\\CRUD\\": "src"
+            "Backpack\\CRUD\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Dick\\CRUD\\Test\\": "tests"
+            "Backpack\\CRUD\\Test\\": "tests"
         }
     },
     "scripts": {
