--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "php" : ">=5.3.0",
         "backpack/base": "^0.6.7",
         "laravelcollective/html": "~5.0",
-        "barryvdh/laravel-elfinder": "^0.3.5"
+        "barryvdh/laravel-elfinder": "^0.3.5",
+        "livecontrol/eloquent-datatable": "^0.1.5"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
