--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "backpack/base": "^0.6.7",
         "laravelcollective/html": "~5.0",
         "barryvdh/laravel-elfinder": "^0.3.5",
-        "livecontrol/eloquent-datatable": "^0.1.5"
+        "livecontrol/eloquent-datatable": "^0.1.5",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
